--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
                         ],
                         "styles": [
                             "src/styles.css",
-                            "node_modules/bootstrap/dist/css/bootstrap.min.css"
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "node_modules/font-awesome/scss/font-awesome.scss"
                         ],
                         "scripts": [],
                         "es5BrowserSupport": true
